@@ -1,3 +1,9 @@
+2007-11-18  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (desktop_init): add shortcut for
+	/usr/share/backgrounds to background file chooser and also consider it
+	when setting the initial directory (bug #497807)
+
 2007-11-11  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-style.c: (changed_on_disk_cb):
